fixed body 8px margin gap

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,4 +7,6 @@ h1 {
   font-family: Helvetica, sans-serif, Arial;
   font-size: 3vw;
   color: white;
+  margin: 0%;
+  padding: 0%;
 }
