--- a/src/app/map-box/map-box.component.css
+++ b/src/app/map-box/map-box.component.css
@@ -8,7 +8,6 @@
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
   z-index: -1;
 }
 
